# cloud-manager-ai

./: Dockerfile  README.md  inference.py  pyproject.toml
env/: cloud_env.py  models.py
server/: app.py
tasks/: easy_task.py  hard_task.py  medium_task.py
